alignment fixes

--- a/nextjs/src/app/globals.css
+++ b/nextjs/src/app/globals.css
@@ -28,6 +28,8 @@ body {
   body {
     margin: auto;
     max-width: 1280px;
+    /* Should only have a part in managing the box shadow on the last header tab */
+    overflow-x: visible;
   }
 }
 
