--- a/nextjs/src/components/Header.module.css
+++ b/nextjs/src/components/Header.module.css
@@ -3,12 +3,10 @@
   flex-direction: column;
   padding: auto;
   text-align: center;
-  max-width: 95vw;
-  /* align items to right */
+  gap: 5px;
 }
 
-/* TODO: look up tablet breakpoint */
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   .header {
     /* TODO: remove placeholder later */
     display: flex;
@@ -16,11 +14,8 @@
   }
 }
 
-/* TODO: look up XL breakpoint */
 @media (min-width: 1280px) {
   .header {
     max-width: 1280px;
   }
 }
-
-/* TODO: look up how to set tabs to 2 spaces in VS */
