--- a/nextjs/src/components/NavBar.module.css
+++ b/nextjs/src/components/NavBar.module.css
@@ -3,12 +3,15 @@
   flex-direction: column;
   gap: 5px;
   width: 100%;
+  max-width: 95vw;
+  margin-left: auto;
+  height: 370px;
 }
 
-/* TODO: Fix the min width to the actual tablet size */
-@media (min-width: 720px) {
+@media (min-width: 768px) {
   .navBar {
     flex-direction: row;
     gap: 0;
+    margin-right: auto;
   }
 }
